go back to the old way, with an actual parameter checker

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,10 +3,7 @@
     <head>
     </head>
     <body>
-        <ul>
-            <% _.each(commits, function (commit) { %>
-            <li><%= commit.commit.message %></li>
-            <% }) %>
-        </ul>
+        <h1>Angularz</h1>
+        <button type="button">Collect commit data!</button>
     </body>
 </html>
