the file structure is weird

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -29,8 +29,8 @@
     -->
 
     <!--STYLES-->
+    <link rel="stylesheet" href="/styles/angular-chart.css">
     <link rel="stylesheet" href="/styles/importer.css">
-    <link rel="stylesheet" href="/bower_components/angular-chart.js/dist/angular-chart.css">
     <!--STYLES END-->
   </head>
 
@@ -61,7 +61,7 @@
     -->
 
     <!--TEMPLATES-->
-
+    
     <!--TEMPLATES END-->
 
 
@@ -90,9 +90,9 @@
 
     <!--SCRIPTS-->
     <script src="/js/dependencies/sails.io.js"></script>
-    <script src="/bower_Components/angular/angular.js"></script>
-    <script src="/bower_components/chartjs/Chart.js"></script>
-    <script src="/bower_components/angular-chart.js/dist/angular-chart.js"></script>
+    <script src="/js/Chart.js"></script>
+    <script src="/js/angular-chart.js"></script>
+    <script src="/js/angular.js"></script>
     <script src="/js/scripts.js"></script>
     <!--SCRIPTS END-->
   </body>
