cleaned up file structure

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -90,9 +90,10 @@
 
     <!--SCRIPTS-->
     <script src="/js/dependencies/sails.io.js"></script>
+    <script src="/js/dependencies/angular.js"></script>
+    <script src="/js/dependencies/jquery.js"></script>
     <script src="/js/Chart.js"></script>
     <script src="/js/angular-chart.js"></script>
-    <script src="/js/angular.js"></script>
     <script src="/js/scripts.js"></script>
     <!--SCRIPTS END-->
   </body>
