--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,8 @@
-<h1>Angularz</h1>
-<button type="button">Collect commit data!</button>
+<div id="hero">
+  <h1>Cold Review</h1>
+  <input type="text" placeholder="GitHub Repo URL">
+  <button type="button">Go!</button>
+</div>
 <div id="line-chart" ng-controller="LineCtrl">
   <canvas id="line" class="chart chart-line" data="data" labels="labels" legend="true" series="series" click="onClick">
   </canvas>
