--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -31,6 +31,7 @@
     <!--STYLES-->
     <link rel="stylesheet" href="/styles/angular-chart.css">
     <link rel="stylesheet" href="/styles/importer.css">
+    <link rel="stylesheet" href="/styles/styles.css">
     <!--STYLES END-->
   </head>
 
