--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,6 +3,8 @@
       <h1>Cold Review</h1>
           <input type="text" ng-model="repoUrl" placeholder="GitHub Repo URL">
           <button ng-click="loadData()" type="button">Go!</button>
+          <button ng-click="updateFaster()" type="button">+</button>
+          <button ng-click="updateSlower()" type="button">-</button>
     </div>
     <div id="line-chart">
       <canvas id="line" class="chart chart-line" data="data" labels="labels" legend="true" series="series" click="onClick">
