--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -48,6 +48,11 @@ html, body {
 
 body {
   background-color: #34495e;
+  transition: background-color 0.5s ease;
+}
+
+.entered {
+  background-color: #fff;
 }
 
 #hero {
