--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -44,11 +44,20 @@ table {
 
 html, body {
   height: 100%;
+  font-family: sans-serif;
 }
 
 body {
   background-color: #34495e;
   transition: background-color 0.5s ease;
+}
+
+h4 {
+  text-transform: uppercase;
+  font-size: 20px;
+  font-weight: 700;
+  text-align: center;
+  margin-bottom: 10px;
 }
 
 .entered {
@@ -90,6 +99,19 @@ body {
   cursor: pointer;
 }
 
-#line {
+#line, #commit-feed, #temp-settings {
   display: none;
+}
+
+#commit-feed, #temp-settings {
+  width: 45%;
+  padding: 20px;
+}
+
+#commit-feed {
+  float: left;
+}
+
+#temp-settings {
+  float: right;
 }
