--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,7 +20,18 @@
       </div>
     <div id="temp-settings">
       <h4>Temperature Settings</h4>
-
+      <div id="container">
+        <div class="temp-display">
+          <h1>0&deg;</h1>
+          Current
+        </div><div class="temp-display">
+          <h1>0&deg;</h1>
+          Ambient
+        </div><div class="temp-display">
+          <h1>0&deg;</h1>
+          Max
+        </div>
+      </div>
     </div>
 
 </div>
