formatted chart variables better for our purposes

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
       <button ng-click="githubRequest()" type="button">Go!</button>
     </div>
     <div id="line-chart">
-      <canvas id="line" class="chart chart-line" data="data" labels="labels"  series="series" click="onClick" height="50">
+      <canvas id="line" class="chart chart-line" data="commitVolumes" labels="labels"  series="series" click="onClick" height="50">
       </canvas>
       <button ng-click="updateFaster()" type="button">+</button>
       <button ng-click="updateSlower()" type="button">-</button>
