--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -27,7 +27,7 @@
             + Import stylesheets from other directories
             + Use a different or additional preprocessor, like SASS, SCSS or Stylus
     -->
-
+    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
     <!--STYLES-->
     <link rel="stylesheet" href="/styles/angular-chart.css">
     <link rel="stylesheet" href="/styles/importer.css">
