--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,9 +17,9 @@
           <ul>
               <li ng-repeat="commit in commitList | limitTo: 10">
                   {{ commit.commit.committer.name }}: {{ commit.commit.message }}
-                  <i class="fa fa-caret-up" ng-if="commit.idol.sentiment=='positive'"> 0.52</i>
-                  <i class="fa fa-caret-down" ng-if="commit.idol.sentiment=='negative'"> -0.82</i>
-                  <i class="fa fa-minus-circle" ng-if="commit.idol.sentiment=='neutral'"> -0.1</i>
+                  <i class="fa fa-caret-up" ng-if="commit.idol.sentiment=='positive'"> {{ commit.idol.score }}</i>
+                  <i class="fa fa-caret-down" ng-if="commit.idol.sentiment=='negative'"> {{ commit.idol.score }}</i>
+                  <i class="fa fa-minus-circle" ng-if="commit.idol.sentiment=='neutral'"> {{ commit.idol.score }}</i>
               </li>
           </ul>
       </div>
