--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -1,3 +1,6 @@
+
+@import url(http://fonts.googleapis.com/css?family=Titillium+Web);
+
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -44,7 +47,7 @@ table {
 
 html, body {
   height: 100%;
-  font-family: sans-serif;
+  font-family: 'Titillium Web', sans-serif;
 }
 
 body {
@@ -74,14 +77,15 @@ h4 {
 #hero h1 {
   text-transform: lowercase;
   font-size: 80px;
-  font-family: sans-serif;
+  font-family: 'Titillium Web', sans-serif;
+  margin-bottom: 10px;
 }
 
 #hero input[type=text] {
   padding: 10px;
   width: 300px;
   border: 1px solid #fff;
-  font-family: sans-serif;
+  font-family: 'Titillium Web', sans-serif;
   font-size: 15px;
   border-top-left-radius: 10px;
   border-bottom-left-radius: 10px;
@@ -92,7 +96,7 @@ h4 {
   background: #2980b9;
   border: 1px solid #fff;
   color: #fff;
-  font-family: sans-serif;
+  font-family: 'Titillium Web', sans-serif;
   font-size: 15px;
   border-top-right-radius: 10px;
   border-bottom-right-radius: 10px;
@@ -149,7 +153,7 @@ h4 {
 }
 
 .temp-display h1 {
-  font-size: 60px;
+  font-size: 70px;
 }
 
 #container::after {
