--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,8 +9,8 @@
       </canvas>
       <canvas id="line-temperatures" class="chart chart-line" data="temperatureValues" labels="labels"  series="tempSeries" legend="legend" click="onClick" height="40">
       </canvas>
-      <button ng-click="updateFaster()" type="button">+</button>
-      <button ng-click="updateSlower()" type="button">-</button>
+      <button class="update-rate-button" ng-click="updateFaster()" type="button">+</button>
+      <button class="update-rate-button" ng-click="updateSlower()" type="button">-</button>
     </div>
     <div id="commit-feed">
       <h4>Most Recent Commits</h4>
